Fri Nov 09 11:29:21 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: remove some leaks

Mon Nov 05 11:05:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/apps/tsql.c: use pipes to avoid infinite counter

Mon Nov 05 09:29:54 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: fix log avoidance for long logins

Sun Nov 04 09:16:08 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/gssapi.c: small cleanup

Sat Nov 03 14:31:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/config.c src/tds/mem.c:
	- add server_host_name to TDSCONNECTION
	* src/tds/gssapi.c: some improves

Fri Nov 02 11:33:16 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/gssapi.c: add small comment

Tue Oct 30 16:45:41 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/Makefile.am src/tds/gssapi.c src/tds/login.c:
	- include developing code for GSSAPI

Tue Oct 30 16:36:29 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/tds/login.c src/ctlib/ct.c src/tds/read.c:
	* src/tds/token.c:
	- finish merging tds9 code as developing

Tue Oct 30 16:02:04 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- make odbc row_count 64bit

Tue Oct 30 13:14:00 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/config.c src/tds/query.c:
	- more merge for tds9

Tue Oct 30 11:31:30 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c:
	* src/server/server.c src/tds/token.c:
	- merge partially tds9 patch

Tue Oct 30 11:15:20 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c:
	- avoid wrong assert if error and tdserror called
	* src/tds/query.c: limit data length to maximun allowed

Wed Oct 24 17:55:56 EDT 2007	JK Lowden <jklowden@freetds.org>
	* include/sqldb.h define dbfreelogin
	* src/dblib/unittests/common.h add commentary
